Pre-publish sync: Fix paths for sub-pages

--- a/index.html
+++ b/index.html
@@ -372,12 +372,132 @@
 <h1>יצירת תמונות בינה מלאכותית בעברית</h1>
 <h3>PixelBrain - כלי בינה מלאכותית מתקדם ליצירת תמונות מרהיבות במחיר זול של 9.90 ש"ח בלבד</h3>
 <div class="hero-cta">
-<a href="/contact" class="btn-primary">התחל עכשיו</a>
+<a href="#create-form" class="btn-payment-primary">התחל עכשיו - רק 9.90 ש״ח</a>
 <a href="/services" class="btn-secondary">למד עוד</a>
 </div>
 </div>
 <img data-placeholder="hero-1" data-context="Wide futuristic workspace showing AI technology interface with holographic displays and modern design elements" src="/assets/pixelbrain-hero-hero-1.webp" alt="ממשק טכנולוגי מתקדם של PixelBrain" class="hero-img">
 </section>
+
+<section class="payment-info">
+<div class="container">
+<h2>איך לשלם?</h2>
+<p class="payment-subtitle">תשלום פשוט ומאובטח בשלושה שלבים:</p>
+<div class="payment-steps">
+<div class="payment-step">
+<div class="payment-step-number">1</div>
+<h3>בחר את סוג התמונה והעיצוב שלך למטה</h3>
+</div>
+<div class="payment-step">
+<div class="payment-step-number">2</div>
+<h3>שלח לנו את הפרטים בWhatsApp</h3>
+</div>
+<div class="payment-step">
+<div class="payment-step-number">3</div>
+<h3>שלם 9.90 ש״ח בלבד והתמונה שלך תהיה מוכנה תוך דקות</h3>
+</div>
+</div>
+</div>
+</section>
+
+<section class="create-form-section" id="create-form">
+<div class="container">
+<h2>צור את התמונה שלך</h2>
+<form class="image-creation-form" id="imageCreationForm">
+<div class="form-section">
+<h3>סוג התמונה</h3>
+<div class="radio-cards">
+<label class="radio-card">
+<input type="radio" name="imageType" value="אומנות דיגיטלית" required>
+<div class="radio-card-content">
+<i class="fas fa-palette"></i>
+<span>אומנות דיגיטלית</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="imageType" value="תמונה שיווקית" required>
+<div class="radio-card-content">
+<i class="fas fa-bullhorn"></i>
+<span>תמונה שיווקית</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="imageType" value="צילום מוצר" required>
+<div class="radio-card-content">
+<i class="fas fa-camera"></i>
+<span>צילום מוצר</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="imageType" value="אחר" required>
+<div class="radio-card-content">
+<i class="fas fa-star"></i>
+<span>אחר</span>
+</div>
+</label>
+</div>
+</div>
+
+<div class="form-section">
+<h3>סגנון העיצוב</h3>
+<div class="radio-cards">
+<label class="radio-card">
+<input type="radio" name="designStyle" value="ריאליסטי" required>
+<div class="radio-card-content">
+<i class="fas fa-image"></i>
+<span>ריאליסטי</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="designStyle" value="אומנותי" required>
+<div class="radio-card-content">
+<i class="fas fa-paint-brush"></i>
+<span>אומנותי</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="designStyle" value="קריקטורי" required>
+<div class="radio-card-content">
+<i class="fas fa-smile"></i>
+<span>קריקטורי</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="designStyle" value="מופשט" required>
+<div class="radio-card-content">
+<i class="fas fa-shapes"></i>
+<span>מופשט</span>
+</div>
+</label>
+<label class="radio-card">
+<input type="radio" name="designStyle" value="מינימליסטי" required>
+<div class="radio-card-content">
+<i class="fas fa-circle"></i>
+<span>מינימליסטי</span>
+</div>
+</label>
+</div>
+</div>
+
+<div class="form-section">
+<h3>תאר את התמונה שלך</h3>
+<textarea 
+  name="imageDescription" 
+  class="image-description-textarea" 
+  placeholder="תאר את התמונה שאתה רוצה ליצור... (למשל: חתול כתום יושב על ספה כחולה בסגנון אומנותי)"
+  rows="6"
+  required
+></textarea>
+</div>
+
+<button type="submit" class="btn-whatsapp-submit">
+<i class="fab fa-whatsapp"></i>
+שלח בWhatsApp ושלם 9.90 ש״ח
+</button>
+</form>
+</div>
+</section>
+
 <section class="features">
 <div class="container">
 <h2>למה לבחור ב-PixelBrain?</h2>
@@ -516,7 +636,20 @@
 <a href="/contact" class="btn-primary">צור קשר עכשיו</a>
 </div>
 </section>
-<a href="https://wa.me/972555667615" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+
+<section class="payment-cta-banner">
+<div class="container">
+<div class="payment-cta-content">
+<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
+<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
+<i class="fab fa-whatsapp"></i>
+התחל עכשיו בWhatsApp
+</a>
+</div>
+</div>
+</section>
+
+<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -529,7 +662,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972555667615" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
@@ -609,6 +742,27 @@
     });
 })();
 </script>
+
+<script>
+// Image Creation Form Handler
+document.getElementById('imageCreationForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  var imageType = document.querySelector('input[name="imageType"]:checked').value;
+  var designStyle = document.querySelector('input[name="designStyle"]:checked').value;
+  var description = document.querySelector('textarea[name="imageDescription"]').value;
+  
+  var message = 'שלום! אני רוצה ליצור תמונה:\n\n';
+  message += 'סוג התמונה: ' + imageType + '\n';
+  message += 'סגנון העיצוב: ' + designStyle + '\n';
+  message += 'תיאור: ' + description + '\n\n';
+  message += 'אני מוכן לשלם 9.90 ש״ח';
+  
+  var whatsappUrl = 'https://wa.me/972501234567?text=' + encodeURIComponent(message);
+  window.open(whatsappUrl, '_blank');
+});
+</script>
+
     <div data-integration="accessibility:toolbar"></div>
 
     <script id="zappy-mobile-submenu-script">
