--- a/contact.html
+++ b/contact.html
@@ -478,7 +478,20 @@
 <a href="/services" class="btn-primary">גלה את השירותים</a>
 </div>
 </section>
-<a href="https://wa.me/972555667615" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+
+<section class="payment-cta-banner">
+<div class="container">
+<div class="payment-cta-content">
+<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
+<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
+<i class="fab fa-whatsapp"></i>
+התחל עכשיו בWhatsApp
+</a>
+</div>
+</div>
+</section>
+
+<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -491,7 +504,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972555667615" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
