Pre-publish sync: Fix paths for sub-pages

--- a/about.html
+++ b/about.html
@@ -378,7 +378,7 @@
 <h2>המסע שלנו</h2>
 <p>PixelBrain נוסדה מתוך חזון פשוט אך רב-עוצמה: להפוך את יצירת תמונות בינה מלאכותית בעברית לנגישה, פשוטה ואיכותית עבור כולם. ראינו שוק שבו כלים מתקדמים ליצירת תמונות היו יקרים, מסובכים, ולרוב לא תמכו בשפה העברית באופן מלא. החלטנו לשנות את זה.</p>
 <p>הצוות שלנו, המורכב ממומחי בינה מלאכותית, מעצבים גרפיים ומפתחי תוכנה, עבד במשך חודשים ארוכים כדי לפתח כלי בינה מלאכותית ליצירת תמונות שמבין את השפה העברית בצורה מושלמת. לא רק את המילים, אלא גם את ההקשר התרבותי, הניואנסים והביטויים הייחודיים לשפה.</p>
-<p>התוצאה היא PixelBrain - מערכת שמאפשרת לכל אחד, בלי קשר לידע טכני או רקע בעיצוב, ליצור תמונות מרהיבות בקלות. בניית תמונות AI במחיר זול של 9.90 ש"ח בלבד הופכת את הטכנולוגיה המתקדמת הזו לנגישה לעסקים קטנים, יוצרי תוכן עצמאיים, וכל מי שזקוק לתמונות איכותיות.</p>
+<p>התוצאה היא PixelBrain - מערכת שמאפשרת לכל אחד, בלי קשר לידע טכני או רקע בעיצוב, ליצור תמונות מרהיבות בקלות. בניית תמונות AI במחיר זול של <span class="price-highlight">9.90 ש"ח</span> בלבד הופכת את הטכנולוגיה המתקדמת הזו לנגישה לעסקים קטנים, יוצרי תוכן עצמאיים, וכל מי שזקוק לתמונות איכותיות.</p>
 </div>
 </div>
 </section>
@@ -471,7 +471,7 @@
 </div>
 <div class="why-item">
 <h3>מחיר נגיש</h3>
-<p>9.90 ש"ח לתמונה - ללא עלויות נסתרות, ללא מנויים יקרים. שקיפות מלאה.</p>
+<p><span class="price-highlight">9.90 ש"ח</span> לתמונה - ללא עלויות נסתרות, ללא מנויים יקרים. שקיפות מלאה.</p>
 </div>
 <div class="why-item">
 <h3>איכות פרימיום</h3>
@@ -499,20 +499,7 @@
 <a href="/contact" class="btn-primary">צור קשר</a>
 </div>
 </section>
-
-<section class="payment-cta-banner">
-<div class="container">
-<div class="payment-cta-content">
-<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
-<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
-<i class="fab fa-whatsapp"></i>
-התחל עכשיו בWhatsApp
-</a>
-</div>
-</div>
-</section>
-
-<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -525,7 +512,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
