--- a/contact.html
+++ b/contact.html
@@ -419,6 +419,16 @@
 </div>
 <div class="contact-info-item">
 <div class="contact-icon">
+<i class="fab fa-whatsapp"></i>
+</div>
+<div class="contact-details">
+<h3>WhatsApp</h3>
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer">צור קשר ב-WhatsApp</a>
+<p style="font-size: 14px; color: #666; margin-top: 5px;">החלף את המספר במספר שלך (פורמט: 972XXXXXXXXX)</p>
+</div>
+</div>
+<div class="contact-info-item">
+<div class="contact-icon">
 <i class="fas fa-map-marker-alt"></i>
 </div>
 <div class="contact-details">
@@ -450,7 +460,7 @@
 </div>
 <div class="faq-item">
 <h3>כמה עולה להשתמש ב-PixelBrain?</h3>
-<p>בניית תמונות AI במחיר זול של 9.90 ש"ח בלבד לתמונה. אין עלויות נסתרות, אין מנויים חודשיים יקרים. אתה משלם רק עבור מה שאתה משתמש. המחיר כולל תמונה ברזולוציה גבוהה עם זכויות שימוש מלאות.</p>
+<p>בניית תמונות AI במחיר זול של <span class="price-highlight">9.90 ש"ח</span> בלבד לתמונה. אין עלויות נסתרות, אין מנויים חודשיים יקרים. אתה משלם רק עבור מה שאתה משתמש. המחיר כולל תמונה ברזולוציה גבוהה עם זכויות שימוש מלאות.</p>
 </div>
 <div class="faq-item">
 <h3>האם המערכת תומכת בעברית?</h3>
@@ -478,20 +488,7 @@
 <a href="/services" class="btn-primary">גלה את השירותים</a>
 </div>
 </section>
-
-<section class="payment-cta-banner">
-<div class="container">
-<div class="payment-cta-content">
-<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
-<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
-<i class="fab fa-whatsapp"></i>
-התחל עכשיו בWhatsApp
-</a>
-</div>
-</div>
-</section>
-
-<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -504,7 +501,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
