--- a/index.html
+++ b/index.html
@@ -370,131 +370,45 @@
 <div class="hero-overlay"></div>
 <div class="container hero-content">
 <h1>יצירת תמונות בינה מלאכותית בעברית</h1>
-<h3>PixelBrain - כלי בינה מלאכותית מתקדם ליצירת תמונות מרהיבות במחיר זול של 9.90 ש"ח בלבד</h3>
+<h3>PixelBrain - כלי בינה מלאכותית מתקדם ליצירת תמונות מרהיבות במחיר זול של <span class="price-highlight">9.90 ש"ח</span> בלבד</h3>
+<p style="margin-top: 1.5rem; font-size: 16px;">💬 רוצה להתחיל? צור איתנו קשר ב-WhatsApp: <a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer" style="color: #25d366; font-weight: 600; text-decoration: underline;">לחץ כאן</a> (החלף את המספר במספר שלך)</p>
 <div class="hero-cta">
-<a href="#create-form" class="btn-payment-primary">התחל עכשיו - רק 9.90 ש״ח</a>
+<a href="/contact" class="btn-primary">התחל עכשיו - <span class="price-highlight">9.90 ש״ח</span> בלבד</a>
 <a href="/services" class="btn-secondary">למד עוד</a>
 </div>
 </div>
 <img data-placeholder="hero-1" data-context="Wide futuristic workspace showing AI technology interface with holographic displays and modern design elements" src="/assets/pixelbrain-hero-hero-1.webp" alt="ממשק טכנולוגי מתקדם של PixelBrain" class="hero-img">
 </section>
 
-<section class="payment-info">
+<section class="payment-process">
 <div class="container">
-<h2>איך לשלם?</h2>
-<p class="payment-subtitle">תשלום פשוט ומאובטח בשלושה שלבים:</p>
+<h2>תהליך תשלום פשוט ומהיר</h2>
+<h3 style="text-align: center; margin-bottom: 2rem;">איך לשלם?</h3>
 <div class="payment-steps">
 <div class="payment-step">
-<div class="payment-step-number">1</div>
-<h3>בחר את סוג התמונה והעיצוב שלך למטה</h3>
+<div class="step-number-payment">1</div>
+<h3>בחר את סוג התמונה והעיצוב</h3>
+<p>מלא את הטופס למטה ותאר את התמונה שאתה רוצה ליצור</p>
 </div>
 <div class="payment-step">
-<div class="payment-step-number">2</div>
-<h3>שלח לנו את הפרטים בWhatsApp</h3>
+<div class="step-number-payment">2</div>
+<h3>שלח לנו את הפרטים</h3>
+<p>שלח את הבקשה שלך דרך WhatsApp בלחיצת כפתור</p>
 </div>
 <div class="payment-step">
-<div class="payment-step-number">3</div>
-<h3>שלם 9.90 ש״ח בלבד והתמונה שלך תהיה מוכנה תוך דקות</h3>
+<div class="step-number-payment">3</div>
+<h3>שלם <span class="price-highlight">9.90 ש״ח</span> בלבד</h3>
+<p>קבל קישור לתשלום מאובטח ושלם בקלות</p>
+</div>
+<div class="payment-step">
+<div class="step-number-payment">4</div>
+<h3>קבל את התמונה שלך</h3>
+<p>התמונה המוכנה תגיע אליך תוך דקות ספורות</p>
 </div>
 </div>
+<div class="payment-cta-section">
+<a href="/contact" class="btn-payment-large">לתשלום מאובטח - <span class="price-highlight">9.90 ש״ח</span></a>
 </div>
-</section>
-
-<section class="create-form-section" id="create-form">
-<div class="container">
-<h2>צור את התמונה שלך</h2>
-<form class="image-creation-form" id="imageCreationForm">
-<div class="form-section">
-<h3>סוג התמונה</h3>
-<div class="radio-cards">
-<label class="radio-card">
-<input type="radio" name="imageType" value="אומנות דיגיטלית" required>
-<div class="radio-card-content">
-<i class="fas fa-palette"></i>
-<span>אומנות דיגיטלית</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="imageType" value="תמונה שיווקית" required>
-<div class="radio-card-content">
-<i class="fas fa-bullhorn"></i>
-<span>תמונה שיווקית</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="imageType" value="צילום מוצר" required>
-<div class="radio-card-content">
-<i class="fas fa-camera"></i>
-<span>צילום מוצר</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="imageType" value="אחר" required>
-<div class="radio-card-content">
-<i class="fas fa-star"></i>
-<span>אחר</span>
-</div>
-</label>
-</div>
-</div>
-
-<div class="form-section">
-<h3>סגנון העיצוב</h3>
-<div class="radio-cards">
-<label class="radio-card">
-<input type="radio" name="designStyle" value="ריאליסטי" required>
-<div class="radio-card-content">
-<i class="fas fa-image"></i>
-<span>ריאליסטי</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="designStyle" value="אומנותי" required>
-<div class="radio-card-content">
-<i class="fas fa-paint-brush"></i>
-<span>אומנותי</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="designStyle" value="קריקטורי" required>
-<div class="radio-card-content">
-<i class="fas fa-smile"></i>
-<span>קריקטורי</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="designStyle" value="מופשט" required>
-<div class="radio-card-content">
-<i class="fas fa-shapes"></i>
-<span>מופשט</span>
-</div>
-</label>
-<label class="radio-card">
-<input type="radio" name="designStyle" value="מינימליסטי" required>
-<div class="radio-card-content">
-<i class="fas fa-circle"></i>
-<span>מינימליסטי</span>
-</div>
-</label>
-</div>
-</div>
-
-<div class="form-section">
-<h3>תאר את התמונה שלך</h3>
-<textarea 
-  name="imageDescription" 
-  class="image-description-textarea" 
-  placeholder="תאר את התמונה שאתה רוצה ליצור... (למשל: חתול כתום יושב על ספה כחולה בסגנון אומנותי)"
-  rows="6"
-  required
-></textarea>
-</div>
-
-<button type="submit" class="btn-whatsapp-submit">
-<i class="fab fa-whatsapp"></i>
-שלח בWhatsApp ושלם 9.90 ש״ח
-</button>
-</form>
 </div>
 </section>
 
@@ -521,7 +435,7 @@
 <i class="fas fa-dollar-sign"></i>
 </div>
 <h3>מחיר נגיש</h3>
-<p>בניית תמונות AI במחיר זול - רק 9.90 ש"ח. קבל גישה לטכנולוגיה מתקדמת ללא תקציב גבוה.</p>
+<p>בניית תמונות AI במחיר זול - רק <span class="price-highlight">9.90 ש"ח</span>. קבל גישה לטכנולוגיה מתקדמת ללא תקציב גבוה.</p>
 </div>
 <div class="feature-card">
 <div class="feature-icon">
@@ -580,6 +494,46 @@
 </div>
 </div>
 </section>
+
+<section class="image-creator-form">
+<div class="container">
+<h2>בחר את התמונה והעיצוב שלך</h2>
+<h3 style="text-align: center; margin-bottom: 2rem;">ספר לנו מה אתה רוצה ליצור</h3>
+<form class="creator-form" id="imageCreatorForm">
+<div class="form-row">
+<div class="form-group">
+<label for="imageType">סוג התמונה <span class="required">*</span></label>
+<select id="imageType" name="imageType" required>
+<option value="">בחר סוג תמונה</option>
+<option value="אומנות דיגיטלית">אומנות דיגיטלית</option>
+<option value="תמונה שיווקית">תמונה שיווקית</option>
+<option value="צילום מוצר">צילום מוצר</option>
+<option value="אחר">אחר</option>
+</select>
+</div>
+<div class="form-group">
+<label for="designStyle">סגנון עיצוב <span class="required">*</span></label>
+<select id="designStyle" name="designStyle" required>
+<option value="">בחר סגנון</option>
+<option value="ריאליסטי">ריאליסטי</option>
+<option value="אומנותי">אומנותי</option>
+<option value="קריקטורי">קריקטורי</option>
+<option value="מופשט">מופשט</option>
+<option value="מינימליסטי">מינימליסטי</option>
+<option value="פנטזיה">פנטזיה</option>
+</select>
+</div>
+</div>
+<div class="form-group">
+<label for="imageDescription">תאר את התמונה שאתה רוצה <span class="required">*</span></label>
+<textarea id="imageDescription" name="imageDescription" rows="6" required placeholder="לדוגמה: חתול כתום יושב על ענן ורוד, עם רקע של שקיעה צבעונית, בסגנון אומנות דיגיטלית...&#10;&#10;ככל שתהיה מפורט יותר, התוצאה תהיה טובה יותר. תאר צבעים, תאורה, רקע, אלמנטים נוספים ועוד."></textarea>
+</div>
+<button type="submit" class="btn-form-submit">המשך לתשלום - <span class="price-highlight">9.90 ש״ח</span></button>
+<p class="form-note">💡 לאחר השליחה, נשלח לך קישור לתשלום מאובטח של <span class="price-highlight">9.90 ש״ח</span> בלבד</p>
+</form>
+</div>
+</section>
+
 <section class="testimonials">
 <div class="container">
 <h2>מה אומרים הלקוחות שלנו</h2>
@@ -633,23 +587,10 @@
 <div class="container">
 <h2>מוכנים להתחיל ליצור?</h2>
 <p>הצטרפו לאלפי משתמשים שכבר יוצרים תמונות מדהימות עם PixelBrain</p>
-<a href="/contact" class="btn-primary">צור קשר עכשיו</a>
+<a href="/contact" class="btn-primary">התחל ליצור תמונות - <span class="price-highlight">9.90 ש״ח</span></a>
 </div>
 </section>
-
-<section class="payment-cta-banner">
-<div class="container">
-<div class="payment-cta-content">
-<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
-<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
-<i class="fab fa-whatsapp"></i>
-התחל עכשיו בWhatsApp
-</a>
-</div>
-</div>
-</section>
-
-<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -662,7 +603,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
@@ -744,21 +685,34 @@
 </script>
 
 <script>
-// Image Creation Form Handler
-document.getElementById('imageCreationForm').addEventListener('submit', function(e) {
+// Image Creator Form Handler
+document.getElementById('imageCreatorForm').addEventListener('submit', function(e) {
   e.preventDefault();
   
-  var imageType = document.querySelector('input[name="imageType"]:checked').value;
-  var designStyle = document.querySelector('input[name="designStyle"]:checked').value;
-  var description = document.querySelector('textarea[name="imageDescription"]').value;
+  var imageType = document.getElementById('imageType').value;
+  var designStyle = document.getElementById('designStyle').value;
+  var imageDescription = document.getElementById('imageDescription').value;
   
-  var message = 'שלום! אני רוצה ליצור תמונה:\n\n';
-  message += 'סוג התמונה: ' + imageType + '\n';
-  message += 'סגנון העיצוב: ' + designStyle + '\n';
-  message += 'תיאור: ' + description + '\n\n';
-  message += 'אני מוכן לשלם 9.90 ש״ח';
+  if (!imageType || !designStyle || !imageDescription) {
+    alert('אנא מלא את כל השדות');
+    return;
+  }
   
-  var whatsappUrl = 'https://wa.me/972501234567?text=' + encodeURIComponent(message);
+  // Create WhatsApp message
+  var message = 'שלום! אני רוצה ליצור תמונה עם PixelBrain:\n\n';
+  message += '📸 סוג התמונה: ' + imageType + '\n';
+  message += '🎨 סגנון עיצוב: ' + designStyle + '\n';
+  message += '📝 תיאור: ' + imageDescription + '\n\n';
+  message += 'אשמח לקבל קישור לתשלום של 9.90 ש"ח';
+  
+  // Encode message for URL
+  var encodedMessage = encodeURIComponent(message);
+  
+  // Replace with your WhatsApp number (format: 972XXXXXXXXX)
+  var whatsappNumber = '972XXXXXXXXX';
+  var whatsappUrl = 'https://wa.me/' + whatsappNumber + '?text=' + encodedMessage;
+  
+  // Open WhatsApp
   window.open(whatsappUrl, '_blank');
 });
 </script>
