--- a/services.html
+++ b/services.html
@@ -380,7 +380,7 @@
 <h2>אומנות דיגיטלית מקורית</h2>
 <p>PixelBrain מאפשר לך ליצור יצירות אומנות דיגיטלית ייחודיות ומרהיבות בעזרת כלי בינה מלאכותית ליצירת תמונות המתקדם ביותר. בין אם אתה זקוק לאיורים למאמרים, עיצובים גרפיים לפרויקטים, או יצירות אומנות למטרות אישיות - הטכנולוגיה שלנו מספקת תוצאות ברמה מקצועית.</p>
 <p>המערכת שלנו תומכת במגוון רחב של סגנונות אומנותיים - מריאליזם מפורט ועד אבסטרקט מודרני. אתה יכול לבחור בין סגנונות כמו אקוורל, שמן, דיגיטלי, אנימציה, מנגה ועוד. יצירת תמונות בינה מלאכותית בעברית מאפשרת לך לתאר בדיוק את מה שאתה רוצה לראות, והמערכת מבינה את הניואנסים של השפה העברית.</p>
-<p>בניית תמונות AI במחיר זול של 9.90 ש"ח בלבד הופכת את האומנות הדיגיטלית לנגישה לכולם. אין צורך להשקיע בתוכנות יקרות או בקורסים ארוכים - פשוט תאר את הרעיון שלך ו-PixelBrain יהפוך אותו למציאות תוך שניות.</p>
+<p>בניית תמונות AI במחיר זול של <span class="price-highlight">9.90 ש"ח</span> בלבד הופכת את האומנות הדיגיטלית לנגישה לכולם. אין צורך להשקיע בתוכנות יקרות או בקורסים ארוכים - פשוט תאר את הרעיון שלך ו-PixelBrain יהפוך אותו למציאות תוך שניות.</p>
 <ul class="service-features">
 <li><i class="fas fa-check"></i> מגוון רחב של סגנונות אומנותיים</li>
 <li><i class="fas fa-check"></i> רזולוציה גבוהה מתאימה להדפסה</li>
@@ -449,7 +449,7 @@
 <h2>תמונות לתוכן דיגיטלי</h2>
 <p>יוצרי תוכן, בלוגרים, כותבי מאמרים ומנהלי אתרים זקוקים לתמונות איכותיות באופן קבוע. PixelBrain מספק פתרון מושלם ליצירת תמונות ייחודיות שמתאימות בדיוק לתוכן שלך. בניגוד לתמונות סטוק שכולם משתמשים בהן, התמונות שאתה יוצר עם PixelBrain הן ייחודיות לחלוטין ומותאמות למסר שלך.</p>
 <p>יצירת תמונות בינה מלאכותית בעברית מאפשרת לך ליצור תמונות שמשקפות בדיוק את הנושאים שאתה מדבר עליהם. אתה יכול ליצור תמונות המחשה למאמרים טכניים, תמונות רקע לפוסטים בבלוג, גרפיקות לסרטוני YouTube, ועוד. המערכת מבינה את ההקשר ויכולה ליצור תמונות שמתאימות בדיוק לתוכן.</p>
-<p>עם בניית תמונות AI במחיר זול של 9.90 ש"ח, אתה יכול ליצור תמונות חדשות לכל פוסט או מאמר מבלי לדאוג לתקציב. זה מאפשר לך לשמור על עקביות ויזואלית באתר שלך ולהציע חוויה ייחודית למבקרים.</p>
+<p>עם בניית תמונות AI במחיר זול של <span class="price-highlight">9.90 ש"ח</span>, אתה יכול ליצור תמונות חדשות לכל פוסט או מאמר מבלי לדאוג לתקציב. זה מאפשר לך לשמור על עקביות ויזואלית באתר שלך ולהציע חוויה ייחודית למבקרים.</p>
 <ul class="service-features">
 <li><i class="fas fa-check"></i> תמונות ייחודיות לכל פוסט</li>
 <li><i class="fas fa-check"></i> התאמה מושלמת לנושא התוכן</li>
@@ -564,20 +564,7 @@
 <a href="/contact" class="btn-primary">צור קשר</a>
 </div>
 </section>
-
-<section class="payment-cta-banner">
-<div class="container">
-<div class="payment-cta-content">
-<h2>מוכן ליצור? רק 9.90 ש״ח לתמונה מושלמת</h2>
-<a href="https://wa.me/972501234567" target="_blank" class="btn-whatsapp-cta" rel="noopener noreferrer">
-<i class="fab fa-whatsapp"></i>
-התחל עכשיו בWhatsApp
-</a>
-</div>
-</div>
-</section>
-
-<a href="https://wa.me/972501234567" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -590,7 +577,7 @@
           </div>
           <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
 <a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/972501234567" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></div>
+<a href="https://wa.me/972XXXXXXXXX" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" title="צור קשר ב-WhatsApp (החלף את המספר במספר שלך)"><i class="fab fa-whatsapp"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
